--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -527,6 +527,26 @@ section.header h1 {
     background-color: rgba(255, 255, 255, .3)
 }
 
+.info-message {
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, .25);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    p {
+        margin: 0;
+    }
+    i {
+        font-size: 1.85em;
+        margin: 0 20px 0 0;
+    }
+}
+
+.none {
+    display: none !important;
+}
+
 .forms {
     margin-bottom: 15px;
     z-index: 1;
