--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -262,6 +262,13 @@ select:focus {
     position: relative;
 }
 
+.input-group-text span {
+    width: 90%;
+    white-space: initial;
+    text-align:left;
+    font-size: .85em;
+}
+
 .select-dropdown div.input-group-prepend>div {
     border-bottom: 0;
 }
@@ -533,13 +540,21 @@ section.header h1 {
     background-color: rgba(255, 255, 255, .25);
     box-sizing: border-box;
     display: flex;
-    align-items: center;
+    align-items: center; 
+    .row {
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
     p {
         margin: 0;
     }
     i {
         font-size: 1.85em;
         margin: 0 20px 0 0;
+    }
+    b {
+        display: block;
     }
 }
 
