--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -456,7 +456,7 @@
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col text-left">
                 <button type="button" class="btn btn-secondary" data-toggle="modal" (click)="cancelSignUp()" data-target="#modalCancelar1"
-                  [ngx-scroll-to]="'#header-talentos-globais'">{{formedUser || submittedPersonal ? 'Voltar' : 'Cancelar'}}</button>
+                  [ngx-scroll-to]="'#header-talentos-globais'">{{formedUser || submittedPersonal ? 'Regresso' : 'Cancelar'}}</button>
               </div>
               <div class="col text-right">
                 <button type="button" (click)="registerUser()" class="btn btn-primary" *ngIf="personalData" [disabled]='step1Form.invalid || (!matchDate || invalidEmail)'
