--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -214,11 +214,11 @@
                       </div>
                     </div>
                   </div>
-                  <div *ngIf="isValidStudy('scholarity')" class='error-message'>
+                  <div *ngIf="isValidStudy('scholarity')" class='error-message' i18n='@@formScholarityEmpty'>
                     Selecione um nível de escolaridade
                   </div>
                 </div>
-                <div class="form-group city" *ngIf='user.scholarity && user.scholarity.id != 0 && user.scholarity.id != 1'>
+                <div class="form-group city" *ngIf='user.scholarity && user.scholarity.id > 1'>
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -247,13 +247,13 @@
                     </div>
                     <div class='col-11'>
                       <p>
-                        <b *ngIf='user.scholarity.id != 0 && user.scholarity.id != 1' i18n='@@formCityNotFound'>
+                        <b *ngIf='user.scholarity.id > 1' i18n='@@formCityNotFound'>
                           Não encontrou sua cidade acima?
                         </b>
-                        <span *ngIf='user.scholarity.id != 0 && user.scholarity.id != 1' i18n='@@formChoiceUniversity'>
+                        <span *ngIf='user.scholarity.id > 1' i18n='@@formChoiceUniversity'>
                           Escolha a província onde você estuda e depois insira o nome da universidade
                         </span>
-                        <span *ngIf='user.scholarity.id == 0 || user.scholarity.id == 1' i18n='@@formChoiceProvince'>
+                        <span *ngIf='user.scholarity.id <= 1' i18n='@@formChoiceProvince'>
                           Escolha a província onde você reside
                         </span>
                       </p>
@@ -273,7 +273,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities" (completeMethod)="searchUnivesity($event)" #universityAutocomplete
                           (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();" (keyup)='checkUniversityValue($event)'
-                          dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="{{ (user.scholarity.id == 0 || user.scholarity.id == 1) ? '¿Donde vives?' : '¿Donde estudias?' }}"
+                          dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="{{ (user.scholarity.id <= 1) ? '¿Donde vives?' : '¿Donde estudias?' }}"
                           (onSelect)='checkUniversity(user.university)' i18n-emptyMessage="@@noResults"></p-autoComplete>
                         <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')" *ngIf="user.university"></i>
                       </div>
@@ -283,7 +283,7 @@
                     Selecione uma universidade.
                   </div>
                 </div>
-                <div class="form-group animated fadeIn faster" *ngIf='showOtherUniversityField && user.city.name && user.university && user.scholarity.id != 0 && user.scholarity.id != 1 && user.university.id'>
+                <div class="form-group animated fadeIn faster" *ngIf='showOtherUniversityField && user.city.name && user.university && user.scholarity.id > 1 && user.university.id'>
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
                       <div class="input-group-text">
@@ -306,7 +306,7 @@
                     Por favor, digite uma universidade válida.
                   </div>
                 </div>
-                <div class="form-group animated fadeIn faster college_course">
+                <div class="form-group animated fadeIn faster college_course" *ngIf='user.scholarity.id > 1'>
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
