--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -207,16 +207,16 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions"
                           (completeMethod)="searchScholarity($event)" #scholarityAutocomplete (onFocus)="selectInput('scholarity');scholarityAutocomplete.handleDropdownClick();"
-                          dropdownMode="current" field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?" i18n-emptyMessage="@@noResults" i18n-placeholder="@@cityPlaceholder"></p-autoComplete>
+                          dropdownMode="current" field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?" i18n-emptyMessage="@@noResults" i18n-placeholder="@@scholarityPlaceholder"></p-autoComplete>
                         <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')" *ngIf="user.scholarity"></i>
                       </div>
                     </div>
                   </div>
-                  <div *ngIf="isValidStudy('scholarity')" class='error-message'>
+                  <div *ngIf="isValidStudy('scholarity')" class='error-message' i18n='@@formScholarityEmpty'>
                     Selecione um nível de escolaridade
                   </div>
                 </div>
-                <div class="form-group city" *ngIf='user.scholarity && user.scholarity.id != 0 && user.scholarity.id != 1'>
+                <div class="form-group city" *ngIf='user.scholarity && user.scholarity.id > 1'>
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -245,13 +245,13 @@
                     </div>
                     <div class='col-11'>
                       <p>
-                        <b *ngIf='user.scholarity.id != 0 && user.scholarity.id != 1' i18n='@@formCityNotFound'>
+                        <b *ngIf='user.scholarity.id > 1' i18n='@@formCityNotFound'>
                           Não encontrou sua cidade acima?
                         </b>
-                        <span *ngIf='user.scholarity.id != 0 && user.scholarity.id != 1' i18n='@@formChoiceUniversity'>
+                        <span *ngIf='user.scholarity.id > 1' i18n='@@formChoiceUniversity'>
                           Escolha a província onde você estuda e depois insira o nome da universidade
                         </span>
-                        <span *ngIf='user.scholarity.id == 0 || user.scholarity.id == 1' i18n='@@formChoiceProvince'>
+                        <span *ngIf='user.scholarity.id <= 1' i18n='@@formChoiceProvince'>
                           Escolha a província onde você reside
                         </span>
                       </p>
@@ -271,7 +271,7 @@
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities" (completeMethod)="searchUnivesity($event)" #universityAutocomplete
                           (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();" (keyup)='checkUniversityValue($event)'
-                          dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="{{ (user.scholarity.id == 0 || user.scholarity.id == 1) ? '¿Donde vives?' : '¿Donde estudias?' }}"
+                          dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="{{ (user.scholarity.id <= 1) ? '¿Donde vives?' : '¿Donde estudias?' }}"
                           i18n-emptyMessage="@@noResults" (onSelect)='checkUniversity(user.university)'></p-autoComplete>
                         <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')" *ngIf="user.university"></i>
                       </div>
@@ -281,7 +281,7 @@
                     Selecione uma universidade.
                   </div>
                 </div>
-                <div class="animated fadeIn faster form-group" *ngIf='showOtherUniversityField && user.city.name && user.university && user.scholarity.id != 0 && user.scholarity.id != 1 && user.university.id'>
+                <div class="animated fadeIn faster form-group" *ngIf='showOtherUniversityField && user.city.name && user.university && user.scholarity.id > 1 && user.university.id'>
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
                       <div class="input-group-text">
@@ -304,7 +304,7 @@
                     Por favor, digite uma universidade válida.
                   </div>
                 </div>
-                <div class=" animated fadeIn faster form-group college_course">
+                <div class=" animated fadeIn faster form-group college_course" *ngIf='user.scholarity.id > 1'>
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
